--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <form class="search-form">
+      <input type="text" name="search" placeholder="Search images..."/>
+      <button type="submit">Search</button>
+    </form>
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <span class="loader"></span>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <ul class="gallery"></ul>
 
-    <script type="module" src="./main.js"></script>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
