--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <form class="search-form">
       <input type="text" name="search" placeholder="Search images..."/>
-      <button type="submit">Search 1</button>
+      <button type="submit">Search</button>
     </form>
 
     <span class="loader"></span>
